--- a/index.css
+++ b/index.css
@@ -1,10 +1,52 @@
+body, html {
+background: black;
+color: white;
+font-size: 1.2rem;
+}
+
 #content {
   margin:auto;
-  width: 20%;
+  width: 90%;
   padding: 30px;
-  border: 1px solid black;
+
 }
 button {
   font-size: 20px;
   font-weight: bold;
+}
+
+.selected {
+  margin: 4px;
+  padding: 8px;
+  border: 1px solid yellow;
+}
+
+.search {
+  padding: 4px;
+  font-size: 1.5rem;
+}
+
+.unselected {
+  border:0px ;
+}
+
+.tooltip {
+  height: 80px;
+  font-size: 1.1rem;
+}
+
+.el {
+  display:block; width: 10px; height: 10px;
+}
+
+.yes {
+  background: lime;
+}
+
+.no {
+  background: crimson;
+}
+
+.highlight {
+  background: cyan;
 }
